@@ -161,6 +161,7 @@ Version 1.11.0-svn:
    * Added: New floating point emulation code.
    * Make Wolf Rider and Wolf raise their heads if and only if unit is
      submerged: forums.wesnoth.org/viewtopic.php?f=4&t=36212
+   * Changed: Add a small cache for reading files, giving a minor improvement.
 
 Version 1.10.0:
  * Campaigns:
